--- a/build.gradle
+++ b/build.gradle
@@ -64,6 +64,7 @@ final sparkVersion = System.getProperty('spark.version', '2.2.0')
 final hadoopVersion = System.getProperty('hadoop.version', '2.8.2')
 final hadoopBamVersion = System.getProperty('hadoopBam.version','7.10.0')
 final genomicsdbVersion = System.getProperty('genomicsdb.version','0.9.2-proto-3.0.0-beta-1+uuid-static')
+final tensorflowVersion = System.getProperty('tensorflow.version','1.4.0')
 final testNGVersion = '6.11'
 // Using the shaded version to avoid conflicts between its protobuf dependency
 // and that of Hadoop/Spark (either the one we reference explicitly, or the one
@@ -74,7 +75,7 @@ final baseJarName = 'gatk'
 final secondaryBaseJarName = 'hellbender'
 final docBuildDir = "$buildDir/docs"
 final pythonPackageArchiveName = 'gatkPythonPackageArchive.zip'
-final gatkCondaTemplate = "scripts/gatkcondaenv.yml.template"
+final gatkCondaTemplate = "gatkcondaenv.yml.template"
 final gatkCondaYML = "gatkcondaenv.yml"
 final gatkCondaIntelYML = "gatkcondaenv.intel.yml"
 final largeResourcesFolder = "src/main/resources/large"
@@ -555,41 +556,40 @@ task bundle(type: Zip) {
     }
 }
 
-// Create the python package archive file, and two GATK conda environment yml files from the template
+task condaStandardEnvironmentDefinition(type: Copy) {
+    from "scripts"
+    into buildDir
+    include gatkCondaTemplate
+    rename { file -> gatkCondaYML }
+    expand(["condaEnvName":"gatk",
+            "condaEnvDescription" : "Conda environment for GATK Python Tools",
+            "tensorFlowDependency" : "tensorflow==$tensorflowVersion"])
+    doLast {
+        logger.lifecycle("Created standard Conda environment yml file: $gatkCondaYML")
+    }
+}
+
+task condaIntelEnvironmentDefinition(type: Copy) {
+    from "scripts"
+    into buildDir
+    include gatkCondaTemplate
+    rename { file -> gatkCondaIntelYML }
+    expand(["condaEnvName":"gatk-intel",
+            "condaEnvDescription" : "Conda environment for GATK Python Tools running with Intel hardware acceleration",
+            "tensorFlowDependency" :
+                    "https://anaconda.org/intel/tensorflow/$tensorflowVersion/download/tensorflow-$tensorflowVersion-cp36-cp36m-linux_x86_64.whl"])
+    doLast {
+        logger.lifecycle("Created Intel Conda environment yml file: $gatkCondaIntelYML")
+    }
+}
+
+// Create two GATK conda environment yml files from the conda enc template
 // (one for standard GATK and one for running GATK with Intel hardware).
 task condaEnvironmentDefinition() {
-    dependsOn 'pythonPackageArchive'
-    inputs.file gatkCondaTemplate
-    outputs.dir buildDir
-
-    doLast() {
-        def standardCondaBindings = [
-                "condaEnvName":"gatk",
-                "condaEnvDescription" : "Conda environment for GATK Python Tools",
-                "tensorFlowDependency" : "tensorflow==1.4.0"]
-        createFileFromTemplate(gatkCondaTemplate, standardCondaBindings, new File("$buildDir/$gatkCondaYML"))
-
-        def intelCondaBindings = [
-                "condaEnvName":"gatkintel",
-                "condaEnvDescription" : "Conda environment for GATK Python Tools running with Intel hardware acceleration",
-                "tensorFlowDependency" :
-                        "https://anaconda.org/intel/tensorflow/1.4.0/download/tensorflow-1.4.0-cp36-cp36m-linux_x86_64.whl"]
-        createFileFromTemplate(gatkCondaTemplate, intelCondaBindings, new File("$buildDir/$gatkCondaIntelYML"))
-    }
-    doLast {
-        logger.lifecycle("Created conda environment yml files in: $buildDir")
-    }
-
+    dependsOn 'pythonPackageArchive', 'condaStandardEnvironmentDefinition', 'condaIntelEnvironmentDefinition'
 }
 
-// Populate a file based on a template, substituting placeholders with values from a bindings map.
-def createFileFromTemplate(sourceTemplateFile, variableBindings, targetFile) {
-    def templateFile = new File(sourceTemplateFile)
-    def templateEngine = new groovy.text.GStringTemplateEngine()
-    def template = templateEngine.createTemplate(templateFile).make(variableBindings)
-    targetFile.withWriter('UTF-8') { writer -> writer.write(template.toString()) }
-}
-
+// Create the Python package archive file
 task pythonPackageArchive(type: Zip) {
     inputs.dir "src/main/python/org/broadinstitute/hellbender/"
     outputs.file pythonPackageArchiveName
